<resources>
    <string name="app_name">Oleo</string>

    // String resource
    <string name="click_again">Please click again to exit</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="do_not_have_account">Don\'t have an account? Sign up.</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">OR</string>
    <string name="image_description">Image Description</string>
    <string name="validPhoneNumber">Phone number is invalid</string>
    <string name="validPassword">Password is invalid</string>
    <string name="facebook_app_id">344652059597521</string>
    <string name="title_messages">Messages</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_groups">Groups</string>
    <string name="title_more">More</string>
    <string name="title_signUp">SignUp</string>
    <string name="title_cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_success">Sign Up Successful</string>
    <string name="sign_up_fail">Sign Up Failure</string>
    <string name="email">Email</string>
    <string name="validEmail">Email is invalid</string>
    <string name="validUserName">UserName is invalid</string>
    <string name="validConfirmPassword">ConfirmPassword is invalid</string>
    <string name="hintSearch">Search…</string>
    <string name="log_out">Log out</string>
    <string name="watch_list">Watch list</string>
    <string name="app_information">Application information</string>
    <string name="security">Security</string>
    <string name="notification">Notification</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="validate_log_out">Do you want to log out?</string>
    <string name="login_failed">Login failed</string>
    <string name="phone_number_invalid">Phone number is not correct! Please check again</string>
    <string name="password_invalid">Password is not correct! Please check again</string>
    <string name="type_message">Type Message…</string>
    <string name="message_result_sign_up_success">You have successfully registered with the login account name : %s</string>
    <string name="message_please_wait">Please wait....</string>
    <string name="newMessage">add New Message</string>
    <string name="error_phone_number_exists">The phone number is exists</string>
    <string name="see_personal_info">See personal information</string>
    <string name="list_location">List Location</string>
    <string name="rename">Rename</string>
    <string name="unfollow">Unfollow</string>
    <string name="best_friend">Best friend</string>
    <string name="location_list">Location list</string>
    <string name="unfriend">UnFriend</string>
    <string name="block">Block</string>
    <string name="remove_box">Remove box</string>
    <string name="see_personal_information">See personal information</string>
    <string name="option">Option</string>
    <string name="add_friend"> Add friend</string>
    <string name="follow">Follow</string>
    <string name="msg_on_add_friend_request_success">Friend request sent</string>
    <string name="msg_on_add_friend_request_failed">An unknown error has occurred, please try again !</string>
    <string name="msg_defaut_friend_request_prefix">Hi, I\'m</string>
    <string name="msg_defaut_friend_request_postfix">. Add me to your Oleo, please!</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="msg_on_add_friend_success">Add friend success!</string>
    <string name="msg_on_delete_friend_request">Delete friend request success!</string>
    <string name="msg_on_add_friend_failed">An unknown error has occurred, please try again !</string>
    <string name="mutual_friends">mutual friends</string>
    <string name="follow_list">Follow list</string>
    <string name="accept">Accept</string>
    <string name="message_permission_denied">We need to access your location. Please turn on the permissions to continue !</string>
    <string name="cancel_permission_dialog">Don\'t allow</string>
    <string name="accept_permission_dialog">OK</string>
    <string name="msg_on_get_waiting_failed">Get waiting follow request failed!</string>
    <string name="msg_on_get_following_failed">Get following request failed!</string>
    <string name="search_contact_hint">Name, phone number…</string>
    <string name="resend"><u>Resend</u></string>
    <string name="not_receive_sms_code">\u2022 Don\'t receive the code?</string>
    <string name="phone_number_not_exist">Your phone is not registered yet !</string>
    <string name="sms_code_not_correct">The code is not correct!</string>
    <string name="out_of_sms_request">Too many request. Please try again !</string>
    <string name="sms_code_hint">Your code</string>
    <string name="verify_phone_title">Verify your phone number</string>
    <string name="verify_phone_description">An 6-digit code has been sent to you</string>
    <string name="verify">Verify</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="enter_phone_number">Enter your phone number here</string>
    <string name="submit">Submit</string>
    <string name="new_password">New password</string>
    <string name="reset_password_failed">Reset password failed !</string>
    <string name="password_reset_successful">Password reset successful !</string>
    <string name="reset_password">Reset Password</string>
    <string name="invalid_sms_code">The code is invalid</string>
    <string name="msg_on_get_followed_failed">Get user folowed failed!</string>
    <string name="msg_on_follow_request_exists">Follow reqeuest was sented!</string>
    <string name="msg_on_database_error">Something wrong, please try again later!!!</string>
    <string name="msg_do_not_have_permission">You don\'t have permisson to see the list location!!!</string>
    <string name="unfriend_message">Are you sure want to remove %1$s as your friend?</string>
    <string name="msg_on_add_follow_request_failed">Send friend request failed, please try again!!!</string>
    <string name="msg_on_add_follow_request_success">Send friend request success, waiting accept!</string>
    <string name="enter_a_new_name">Please enter a new name for %s</string>
    <string name="update_name">Update Name</string>
    <string name="save">Save</string>
    <string name="delete_box_chat_message">Are you sure want to delete this box chat?</string>
    <string name="delete_box_chat_failed">Delete box chat failed !</string>
    <string name="following">Following</string>
    <string name="sent_follow_request">Follow request sent</string>
    <string name="follow_request">Follow %1$s</string>
    <string name="sent_friend_request">Friend request sent</string>
    <string name="remove_follow_request">Removed follow request !</string>
    <string-array name="tab_titles">
        <item>Followed</item>
        <item>Following</item>
        <item>Waiting</item>
    </string-array>
</resources>
