<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.framgia.oleo.screen.forgotpassword.ResetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/imageViewBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_login"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:tint="@color/colorBlackDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/textViewResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/reset_password"
            android:textColor="@color/colorBlackDark"
            android:textSize="@dimen/sp_24"
            app:layout_constraintBottom_toTopOf="@+id/guidelineResetPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewBack" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineResetPassword"
            app:layout_constraintWidth_percent="0.7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorEditText"
                android:drawablePadding="@dimen/dp_24"
                android:drawableStart="@drawable/ic_password"
                android:fontFamily="serif"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textSize="@dimen/sp_14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutConfirmPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="@id/textLayoutPassword"
            app:layout_constraintStart_toStartOf="@id/textLayoutPassword"
            app:layout_constraintTop_toBottomOf="@id/textLayoutPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorEditText"
                android:drawablePadding="@dimen/dp_24"
                android:drawableStart="@drawable/ic_password"
                android:fontFamily="serif"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textSize="@dimen/sp_14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonResetPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:enabled="false"
            android:padding="@dimen/dp_10"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            android:theme="@style/Theme.MaterialComponents"
            app:backgroundTint="@color/resend_sms_code_state"
            app:cornerRadius="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="@+id/textLayoutConfirmPassword"
            app:layout_constraintStart_toStartOf="@+id/textLayoutConfirmPassword"
            app:layout_constraintTop_toBottomOf="@+id/textLayoutConfirmPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
